unpackaged/main/default/objects/Integration_Settings__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <description>Used to oonfigur with Google API</description>
    <label>API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>