unpackaged/main/default/objects/Integration_Settings__c/fields/Extra_Header_Value__c.field-meta.xml
<CustomField>
    <fullName>Extra_Header_Value__c</fullName>
    <label>Extra Header Value</label>
    <type>TextArea</type>
</CustomField>