unpackaged/main/default/objects/Integration_Settings__c/fields/Header_Value__c.field-meta.xml
<CustomField>
    <fullName>Header_Value__c</fullName>
    <label>Header Value</label>
    <type>TextArea</type>
</CustomField>