unpackaged/main/default/objects/Integration_Settings__c/fields/locationbias__c.field-meta.xml
<CustomField>
    <fullName>locationbias__c</fullName>
    <label>locationbias</label>
    <length>100</length>
    <type>Text</type>
</CustomField>